src/objects/Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Agro__c</fullName>
        <label>Agro/OTR a quente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistente_de_Frota__c</fullName>
        <label>Assistente de Frota(AF). Qtde de Pessoas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacidade_Produtiva_Total__c</fullName>
        <formula>Turnos_Trabalhados__c  *  Dias_Trabalhados_por_Mes__c * Posicoes_de_Enclave__c *  N_de_ciclos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacidade Produtiva Total Carga a Frio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carga_a_Frio__c</fullName>
        <label>Carga a Frio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carga_a_quente__c</fullName>
        <label>Carga a quente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coletador_Vendedor__c</fullName>
        <label>Coletador/Vendedor. Qtde de Pessoas:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coletador__c</fullName>
        <label>Coletador. Qtde de Pessoas:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controla_inadimplencia__c</fullName>
        <label>Controla inadimplência?</label>
        <picklist>
            <picklistValues>
                <fullName>SIM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NAO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dias_Trabalhados_por_Mes__c</fullName>
        <label>Dias Trabalhados por Mês</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipe_de_Vendas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Equipe de Vendas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Faz_controle_de_fluxo_de_caixa__c</fullName>
        <label>Faz controle de fluxo de caixa?</label>
        <picklist>
            <picklistValues>
                <fullName>SIM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NAO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gerencia__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gerência</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Meia_carga_a_frio__c</fullName>
        <label>Meia-carga a frio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meia_carga_a_quente__c</fullName>
        <label>Meia-carga a quente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_ciclos__c</fullName>
        <label>Nº de ciclos/ turno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outros</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Passeio_a_frio__c</fullName>
        <label>Passeio a frio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passeio_remolde__c</fullName>
        <label>Passeio remolde</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passerio_a_quente__c</fullName>
        <label>Passeio a quente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontos_de_Apoio__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pontos de Apoio(Parceiros/Terceiros)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Porta_Patio__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Porta/Pátio</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Posicoes_de_Enclave__c</fullName>
        <label>Posicoes de Autoclave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projeto_Renova_o__c</fullName>
        <label>Projeto Renovação</label>
        <referenceTo>Projeto_Renova_o__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qual_o_preco_medio__c</fullName>
        <label>Qual o preço médio praticado?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qual_percentual__c</fullName>
        <inlineHelpText>Referente ao ultimo mês(Vencidos a mais de 30 dias)</inlineHelpText>
        <label>Qual percentual de inadimplência?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Se_houver_outros__c</fullName>
        <label>Se houver outros quais são?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_equipe_de_vendas__c</fullName>
        <formula>(Assistente_de_Frota__c + Coletador_Vendedor__c + Coletador__c + Vendedor_externo__c + Vendedor_interno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Equipe de Vendas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_pneus_Produzidos__c</fullName>
        <formula>Agro__c + Carga_a_Frio__c +  Meia_carga_a_frio__c  + Carga_a_quente__c + Meia_carga_a_quente__c +  Passeio_remolde__c + Passerio_a_quente__c + Passeio_a_frio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total pneus Produzidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_porcentagem__c</fullName>
        <formula>IF( ((Equipe_de_Vendas__c +  Porta_Patio__c + Pontos_de_Apoio__c + Gerencia__c +  Outros__c)!= 1) , &quot;Error soma dos campos não é 100%&quot;, &quot;100%&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total porcentagem pneus coletados</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnos_Trabalhados__c</fullName>
        <label>Turnos Trabalhados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendedor_externo__c</fullName>
        <label>Vendedor externo. Qtde de Pessoas:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendedor_interno__c</fullName>
        <label>Vendedor interno. Qtde de Pessoas:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Checklist</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>